--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/profilepic.jpg":["assets/profilepic.jpg"]}
+{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"],"assets/github.png":["assets/github.png"],"assets/gmail.png":["assets/gmail.png"],"assets/instagram.png":["assets/instagram.png"],"assets/linkedin.png":["assets/linkedin.png"],"assets/loader.png":["assets/loader.png"],"assets/profilepic.jpg":["assets/profilepic.jpg"]}
