--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "myapp",
-    "short_name": "myapp",
+    "name": "KetanDutt",
+    "short_name": "KetanDutt",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "My Portfolio Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
